--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     
                     <div style="margin-top: 40px;">
                         <p>Atentamente,</p>
-                        <p style="margin-top: 30px; font-weight: 600;">Dr. Alejandro Rodríguez Méndez</p>
+                        <p style="margin-top: 30px; font-weight: 600;">Dr. Mauricio Roque</p>
                         <p>PhD en Diseño Mecánico</p>
                         <p>Tel: +1 (862) 338-7024</p>
                         <p>Email: maroque@unal.edu.co</p>
